# simply-kaspa-utxo-exporter

./: Cargo.toml  README.md
.github/workflows/: binaries.yml  docker.yml
cli/: Cargo.toml
cli/src/: cli_args.rs
database/: Cargo.toml
database/src/: client.rs
database/src/models/: distribution_tier.rs  mod.rs  script_utxo_count.rs  top_script.rs
database/src/query/: create.rs  insert.rs  mod.rs  select.rs  upsert.rs
docker/: Dockerfile  build.sh
exporter/: Cargo.toml
exporter/src/: main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
