[workspace]
resolver = "2"
members = [
    "cli",
    "database",
    "exporter"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.83.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"
edition = "2021"

[workspace.dependencies]
simply-kaspa-utxo-exporter-cli = { path = "cli" }
simply-kaspa-utxo-exporter-database = { path = "database" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-database = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-consensus = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
rocksdb = "0.22.0"
tokio = { version = "1.45.1", features = ["default", "signal"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres"] }
itertools = "0.14.0"
chrono = { version = "0.4.41", features = ["std", "serde"] }
regex = "1.11.1"
env_logger = "0.11.8"
log = "0.4.27"
vergen-git2 = "1.0.7"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
humantime = "2.2.0"
