[package]
name = "simply-kaspa-utxo-indexer-cli"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true
build = "build.rs"

[features]
default = []

[lib]
name = "simply_kaspa_utxo_indexer_cli"
crate-type = ["cdylib", "lib"]

[build-dependencies]
vergen-git2.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
