[package]
name = "simply-kaspa-utxo-indexer-database"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_utxo_indexer_database"
crate-type = ["cdylib", "lib"]

[dependencies]
sqlx.workspace = true
itertools.workspace = true
regex.workspace = true
log.workspace = true
